# hangultrans

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
csrc/: hangul.c
src/hangultrans/: __init__.py
src/hangultrans.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/hangultrans_bjw/: __init__.py  _native.c  _native.cp310-win_amd64.pyd
