[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hangultrans"
version = "0.1.0"
description = "Hangul encoder with 3-byte triples"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Jaewoo Byun", email = "quswodn1211@gmail.com" }
]