[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hangultrans_bjw"
version = "0.1.1"
description = "Hangul encoder with 3-byte triples"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Jaewoo Byun", email = "quswodn1211@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows"
]